<resources>
    <string name="app_name">Gitser</string>
    <string name="tvAppVersion">1.13</string>
    <string name="tvSearchUser">Cari nama pengguna…</string>
    <string name="tvShowing">Menampilkan %s hasil</string>
    <string name="tvUsername">Username</string>
    <string name="tvSearch">Cari</string>
    <string name="tvLocation">Lokasi</string>
    <string name="tvOffice">Kantor</string>
    <string name="tvUrl">Url</string>
    <string name="tvDetailUser">Detail pengguna</string>
    <string name="tvFollowing">Mengikuti</string>
    <string name="tvFollowingNumber">0</string>
    <string name="tvFollowers">Pengikut</string>
    <string name="tvFollowerNumber">0</string>
    <string name="tvRepository">Repositori</string>
    <string name="tvRepositoryNumber">0</string>
    <string name="tvLanguage">Bahasa</string>
    <string name="tvOtherMenus">Menu Lainnya</string>
    <string name="tvFavorite">Favorit</string>
    <string name="tvSettings">Pengaturan</string>
    <string name="tvProfile">Profil</string>
    <string name="tvShare">Bagikan</string>
    <string name="tvOpenInBrowser">Buka di Peramban</string>
    <string name="tvAppInfo">Info Aplikasi</string>
    <string name="tvInfoDesc">Mari bertegur sapa dan jangan lupa untuk menekan tombol star jika bermanfaat</string>
    <string name="tvDeveloperGithubUrl">https://github.com/yumtaufikhidayat/gitser-kt</string>
    <string name="tvDeveloperEmail">yumtaufikhidayat@gmail.com</string>
    <string name="tvInstallEmailApp">Silakan install aplikasi Email terlebih dahulu</string>
    <string name="tvSetReminder">Atur pengingat</string>
    <string name="tvSwitchOn">On</string>
    <string name="tvSwitchOff">Off</string>
    <string name="tvUserNotFound">Pengguna yang kamu cari tidak ditemukan</string>
    <string name="tvNoConnectionTitle">Tidak ada sambungan internet…</string>
    <string name="tvNoConnectionDesc">Periksa sambungan koneksi internet kamu dan coba lagi.</string>
    <string name="tvNoResult">Tidak ada hasil</string>
    <string name="tvLetsSearchUserDesc">Kamu belum mencari pengguna…</string>
    <string name="tvRetry">Coba Lagi</string>
    <string name="tvNoFollowers">Pengguna tidak memiliki pengikut</string>
    <string name="tvNoFollowing">Pengguna tidak mengikuti siapapun</string>
    <string name="tvNoRepository">Pengguna tidak memiliki repositori</string>
    <string name="tvUserType">User type</string>
    <string name="tvNoFavorite">Tidak ada data tersimpan…</string>
    <string name="tvLetsFavorite">Yuk simpan pengguna favorit kamu</string>
</resources>