<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.settings.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <ImageView
            android:id="@+id/imgAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_notifications"/>

        <Switch
            android:id="@+id/swAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/tvSetReminder"
            android:textOff="@string/tvSwitchOn"
            android:textOn="@string/tvSwitchOff"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>