<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgNoRepository"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/tvSearchUser"
        android:src="@drawable/ic_no_repository"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNoRepositoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoResult"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/imgNoRepository"
        app:layout_constraintStart_toStartOf="@id/imgNoRepository"
        app:layout_constraintEnd_toEndOf="@id/imgNoRepository"/>

    <TextView
        android:id="@+id/tvNoRepositoryDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoRepository"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/tvNoRepositoryTitle"
        app:layout_constraintStart_toStartOf="@id/imgNoRepository"
        app:layout_constraintEnd_toEndOf="@id/imgNoRepository"/>

</androidx.constraintlayout.widget.ConstraintLayout>