<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgNoNetworkConnection"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/tvNoConnectionTitle"
        android:src="@drawable/ic_outline_wifi_off"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNoConnectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoConnectionTitle"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/imgNoNetworkConnection"
        app:layout_constraintStart_toStartOf="@id/imgNoNetworkConnection"
        app:layout_constraintEnd_toEndOf="@id/imgNoNetworkConnection"/>

    <TextView
        android:id="@+id/tvNoConnectionDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoConnectionDesc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvNoConnectionTitle"
        app:layout_constraintStart_toStartOf="@+id/tvNoConnectionTitle"
        app:layout_constraintEnd_toEndOf="@id/tvNoConnectionTitle"/>

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        android:text="@string/tvRetry"
        app:layout_constraintTop_toBottomOf="@id/tvNoConnectionDesc"
        app:layout_constraintStart_toStartOf="@id/imgNoNetworkConnection"
        app:layout_constraintEnd_toEndOf="@id/imgNoNetworkConnection"/>

</androidx.constraintlayout.widget.ConstraintLayout>