<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/layoutDetailVisibility"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:constraint_referenced_ids="llFirstLayer, llSecondLayer, imgLocation, tvProfileLocation,
            imgCompany, tvProfileCompany, imgLink, tvProfileLink, tabLayoutProfile, viewPagerProfile"/>

        <LinearLayout
            android:id="@+id/llFirstLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorLayerBack"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/first_layer">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@color/purple_500"
                        app:civ_border_width="2.5dp"
                        app:civ_border_color="@color/purple_500"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tvProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        tools:text="@string/tvProfile"
                        app:layout_constraintStart_toStartOf="@id/imgProfile"
                        app:layout_constraintEnd_toEndOf="@id/imgProfile"
                        app:layout_constraintTop_toBottomOf="@id/imgProfile"/>

                    <TextView
                        android:id="@+id/tvProfileUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/tvUsername"
                        app:layout_constraintStart_toStartOf="@id/tvProfileName"
                        app:layout_constraintEnd_toEndOf="@id/tvProfileName"
                        app:layout_constraintTop_toBottomOf="@id/tvProfileName"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSecondLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/second_layer"
            app:layout_constraintTop_toBottomOf="@id/llFirstLayer">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvFollowingProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    tools:text="@string/tvFollowingNumber"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:text="@string/tvFollowing"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvFollowersProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    tools:text="@string/tvFollowerNumber"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:text="@string/tvFollowers"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvRepositoryProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    tools:text="@string/tvRepositoryNumber"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:text="@string/tvRepository"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/tvLocation"
            app:layout_constraintTop_toBottomOf="@id/llSecondLayer"
            app:layout_constraintBottom_toTopOf="@id/imgCompany"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvProfileLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            tools:text="@string/tvLocation"
            app:layout_constraintTop_toTopOf="@id/imgLocation"
            app:layout_constraintBottom_toBottomOf="@id/imgLocation"
            app:layout_constraintStart_toEndOf="@id/imgLocation"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_office"
            android:contentDescription="@string/tvOffice"
            app:layout_constraintTop_toBottomOf="@id/tvProfileLocation"
            app:layout_constraintStart_toStartOf="@id/imgLocation"/>

        <TextView
            android:id="@+id/tvProfileCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            tools:text="@string/tvOffice"
            app:layout_constraintTop_toTopOf="@id/imgCompany"
            app:layout_constraintBottom_toBottomOf="@id/imgCompany"
            app:layout_constraintStart_toStartOf="@id/tvProfileLocation"
            app:layout_constraintEnd_toEndOf="@id/tvProfileLocation"/>

        <ImageView
            android:id="@+id/imgLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_link"
            android:contentDescription="@string/tvUrl"
            app:layout_constraintTop_toBottomOf="@id/tvProfileCompany"
            app:layout_constraintStart_toStartOf="@id/imgLocation"/>

        <TextView
            android:id="@+id/tvProfileLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            tools:text="@string/tvUrl"
            app:layout_constraintTop_toTopOf="@id/imgLink"
            app:layout_constraintBottom_toBottomOf="@id/imgLink"
            app:layout_constraintStart_toStartOf="@id/tvProfileLocation"
            app:layout_constraintEnd_toEndOf="@id/tvProfileLocation"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:tabGravity="fill"
            app:tabInlineLabel="true"
            app:tabIndicatorColor="@color/purple_500"
            app:tabIndicatorHeight="2dp"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabSelectedTextColor="@color/purple_500"
            app:tabIconTint="@color/color"
            app:layout_constraintTop_toBottomOf="@id/imgLink"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerProfile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tabLayoutProfile"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLoadingProfile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/shimmer_detail"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/layoutNoConnectionVisibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:constraint_referenced_ids="layoutNoConnection"/>

        <include
            android:id="@+id/layoutNoConnection"
            layout="@layout/layout_no_network"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>