<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvRepositoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:text="@string/tvRepository"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDesc"/>

        <TextView
            android:id="@+id/tvRepositoryDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/tvRepository"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName"/>

        <ImageView
            android:id="@+id/imgSize"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_outline_repo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDesc"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvRepositorySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="@string/tvRepositoryNumber"
            app:layout_constraintStart_toEndOf="@+id/imgSize"
            app:layout_constraintTop_toBottomOf="@id/tvRepositoryDesc"/>

        <ImageView
            android:id="@+id/imgLanguage"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_language"
            app:layout_constraintStart_toEndOf="@+id/tvRepositorySize"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDesc"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvRepositoryLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            android:text="@string/tvLanguage"
            app:layout_constraintStart_toEndOf="@+id/imgLanguage"
            app:layout_constraintTop_toBottomOf="@id/tvRepositoryDesc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>